# project

./: .editorconfig  Android.mk  Makefile.am  Makefile.in  README.md  autogen.sh  checkpatch.pl  clang-format.conf  config.h.in  configure  configure.ac  groups  install_android.sh  old_README.md  opentee  opentee.conf  opentee.conf.android  post-commit  project.config  project.qbs  setup_conf.sh  whitelist.txt
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
debian/: changelog  control  copyright  libtee-dev.install  libtee-pkcs11-dev.install  libtee-pkcs11.install  libtee.install  opentee-ca.install  opentee-engine.install  opentee-ta.install  rules
docker/: Dockerfile.opentee  Makefile  build-docker.sh  run-docker.sh
qbs/imports/opentee/probehelper/: libsplit.js
qbs/modules/OpenSSL/: OpenSSL.qbs
qbs/modules/fuse/: fuse.qbs
